Switch to java-module-packaging